# Plugins

./: PluginList.cmake
org.mitk.exampleplugin.eageractivation/: CMakeLists.txt  files.cmake  manifest_headers.cmake
org.mitk.gui.qt.exampleplugin/: CMakeLists.txt  files.cmake  manifest_headers.cmake  plugin.xml
org.mitk.lancet.DianaSeven/: files.cmake  manifest_headers.cmake  plugin.xml
org.mitk.lancet.HTOrobot/: CMakeLists.txt  files.cmake  manifest_headers.cmake  plugin.xml  readme.md
org.mitk.lancet.OralRobot/: CMakeLists.txt  files.cmake  manifest_headers.cmake  plugin.xml
org.mitk.lancet.ZYXtest/: CMakeLists.txt
org.mitk.lancet.accuracytest/: CMakeLists.txt  files.cmake  manifest_headers.cmake  plugin.xml
org.mitk.lancet.accuracytest_bak/: CMakeLists.txt  files.cmake  manifest_headers.cmake  plugin.xml
org.mitk.lancet.dazutest/: CMakeLists.txt  files.cmake  manifest_headers.cmake  plugin.xml
org.mitk.lancet.dentalaccuracy/: CMakeLists.txt  files.cmake  manifest_headers.cmake  plugin.xml
org.mitk.lancet.dentalrobot/: CMakeLists.txt  files.cmake  manifest_headers.cmake  plugin.xml
org.mitk.lancet.totalkneearthroplasty/: CMakeLists.txt  files.cmake  manifest_headers.cmake  plugin.xml
org.mitk.lancet.totalkneearthroplasty/documentation/UserManual/: Manual.dox
org.mitk.lancet.totalkneearthroplasty/documentation/doxygen/: modules.dox
org.mitk.lancet.totalkneearthroplasty/src/internal/: Globals.cpp  Globals.h  Helper.cpp  Helper.h  TKAN.cpp  TKAN.h  TotalKneeArthroplasty.cpp  TotalKneeArthroplasty.h  TotalKneeArthroplastyControls.ui  TotalKneeArthroplasty_imageRegistration.cpp  org_mitk_lancet_totalkneearthroplasty_Activator.cpp  org_mitk_lancet_totalkneearthroplasty_Activator.h
(+121 files in other folders)
